# placement

./: .gitignore  .testr.conf  .travis.yml  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
placement/: conf.py  config.py  db.py  exception.py  i18n.py  models.py  objects.py
placement.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
placement/api/: auth.py  deploy.py  handler.py  microversion.py  requestlog.py  util.py  wsgi_wrapper.py
placement/api/handlers/: aggregate.py  allocation.py  inventory.py  resource_class.py  resource_provider.py  root.py  usage.py
placement/db/: __init__.py  migration.py
placement/db/migrate_repo/: migrate.cfg
placement/tests/: fixtures.py
placement/tests/functional/api/: fixtures.py  test_placement_api.py
